v3.2.1
- Remove unneeded code added in last revision

v3.2.0
- Updated to PVR addon API 5.7.0

v3.1.0
- Updated to PVR addon API v5.3.0

v3.0.4
- Remove of never used addon interface function

v3.0.3
- Update Debian package control
- PVR addon callback way changes

v3.0.2
- Removed old no more needed version functions

v3.0.1
- set dependency versions automatic during build
- removed never used kodi to addon functions
- build system fixes
- language updates

v3.0.0
- Initial Kodi v18 version

v2.4.7
- fixed issue where the recording/timers lists were no longer automatically updating

v2.4.6
- prevent crash if invalid or missing XML is received

v2.4.5
- fix Travis CI build on XCode 6.1
- fix compilation with GCC 5
- always include "NextPVR" in the backend name
- fix GetLiveStreamURL() for channels with subchannel number

v2.4.4
- updated language files from Transifex

v2.4.3
- updated language files from Transifex

v2.4.2
- updated language files from Transifex

v2.4.1
- updated language files from Transifex

v2.4.0
- Cmake: rename find_package kodi to Kodi

v2.3.1
- Fix includes

v2.3.0
- Updated to PVR addon API v5.2.0

v2.1.0
- Updated to PVR addon API v5.1.0

v2.1.1
-Fixed issue where user couldn't select to only record new episodes
-Fixed issue with updating one-off recordings
-Fixed issue where pre/post padding was not being loaded with recording list

v2.1.0
- Updated to PVR addon API v5.0.0

v2.0.3
- Updated to PVR API v4.2.0

v2.0.2
- fixed issue with Transifex overwritting strings
- added extra string 'Repeating (keyword)" string to correct duplicate recording type entry

v2.0.1
- updated language files from Transifex

v2.0.0
- Initial Kodi Krypton version.

v1.12.7
- updated language files from Transifex

v1.12.6
- updated language files from Transifex

v1.12.5
- updated language files from Transifex

v1.12.4
- Updated to GUI API v5.10.0

v1.12.3
- Fixed bug that could occur with recording groups
- Upped minimum NextPVR version to 3.6.0

v1.12.2