@@ -22,7 +22,7 @@
 #ifndef _MD5_H_
 #define _MD5_H_ 1
 
-#include "p8-platform/util/StdString.h"
+#include <string>
 
 
 struct MD5Context {
@@ -39,15 +39,15 @@ namespace PVRXBMC
     XBMC_MD5(void);
     ~XBMC_MD5(void);
     void append(const void *inBuf, size_t inLen);
-    void append(const CStdString& str);
+    void append(const std::string& str);
     void getDigest(unsigned char digest[16]);
-    void getDigest(CStdString& digest);
+    void getDigest(std::string& digest);
     
     /*! \brief Get the MD5 digest of the given text
      \param text text to compute the MD5 for
      \return MD5 digest
      */
-    static CStdString GetMD5(const CStdString &text);
+    static std::string GetMD5(const std::string &text);
 private:
     MD5Context m_ctx;
   };
