@@ -145,13 +145,13 @@ protected:
   NextPVR::Socket           *m_streamingclient;
 
 private:
-  CStdString GetDayString(int dayMask);
-  std::vector<CStdString> split(const CStdString& s, const CStdString& delim, const bool keep_empty);
+  std::string GetDayString(int dayMask);
+  std::vector<std::string> split(const std::string& s, const std::string& delim, const bool keep_empty);
   bool GetChannel(unsigned int number, PVR_CHANNEL &channeldata);
   bool LoadGenreXML(const std::string &filename);
-  int DoRequest(const char *resource, CStdString &response);
+  int DoRequest(const char *resource, std::string &response);
   bool OpenRecordingInternal(long long seekOffset);
-  CStdString GetChannelIcon(int channelID);
+  std::string GetChannelIcon(int channelID);
   void Close();
 
   int                     m_iCurrentChannel;
@@ -172,7 +172,7 @@ private:
   int                     m_iDefaultPostPadding;  
   std::vector< std::string > m_recordingDirectories;
 
-  CStdString              m_PlaybackURL;
+  std::string             m_PlaybackURL;
   LiveShiftSource        *m_pLiveShiftSource;
   unsigned int            m_iLiveStreamUID;
 
