@@ -1,3 +1,5 @@
+- Remove StdString usage
+
 v3.2.1
 - Remove unneeded code added in last revision
 
